--- a/Presentations/Client.WebAssembly/_Imports.razor
+++ b/Presentations/Client.WebAssembly/_Imports.razor
@@ -11,3 +11,4 @@
 @using Client.WebAssembly.Models.Accounts;
 @using Client.WebAssembly.Services;
 @using Shared.Enums;
+@using Microsoft.AspNetCore.Components.Authorization;
