--- a/Presentations/Client.WebAssembly/wwwroot/css/app.css
+++ b/Presentations/Client.WebAssembly/wwwroot/css/app.css
@@ -1,6 +1,8 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Tahoma,'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+
+
 
 h1:focus {
     outline: none;
